--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
     "mongodb": "3.1.10",
     "toastr": "2.1.4",
     "total.js": "3.1.0",
-    "vee-validate": "^2.1.0-beta.8",
+    "vee-validate": "2.1.4",
     "vue": "2.5.21",
     "vue-router": "3.0.1",
     "vue-the-mask": "0.11.1",
     "vue-toastr-2": "0.0.10"
   },
+  "devDependencies": {
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.2.3",
+    "babel-core": "6.26.3",
+    "babel-loader": "8.0.5",
+    "css-loader": "2.1.0",
+    "vue-loader": "15.5.0",
+    "vue-template-compiler": "2.5.21",
+    "webpack-cli": "3.2.0",
+    "webpack-dev-server": "3.1.14",
+    "webpack": "4.28.3",
+    "eslint": "4.0.0",
+    "eslint-plugin-vue": "4.7.1"
+  },
   "peerDependencies": {
     "vue-template-compiler": "2.5.21"
-  },
-  "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/preset-env": "7.0.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.2",
-    "css-loader": "1.0.0",
-    "eslint": "4.0.0",
-    "eslint-plugin-vue": "4.7.1",
-    "vue-loader": "15.4.1",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "4.17.2",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.7"
   }
 }
