--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lintfix": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "vue": "^2.5.21",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
     "axios": "0.18.0",
     "jquery": "3.3.1",
     "mongodb": "3.1.10",
     "toastr": "2.1.4",
-    "vee-validate": "2.1.4",
+    "vee-validate": "^2.1.4",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.1",
     "vue-the-mask": "0.11.1",
-    "vue-toastr-2": "0.0.10"
+    "vue-toastr-2": "0.0.10",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
